Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </section>
 
     <section class="main-content">
-      <blockquote>
+      <p><img src="https://raw.githubusercontent.com/mhishami/tuah/master/example/foo/priv/static/img/tuah-small.png" alt="logo"></p>
+
+<blockquote>
 <h1>
 <a id="tuah" class="anchor" href="#tuah" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tuah</h1>
 
