Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <li>
 <p>Create A New Project</p>
 
-<p>Create a new project is made simple via the addition of <code>new_app.sh</code> script</p>
+<p>Creating a new project is made simple via the addition of <code>new_app.sh</code> script</p>
 
 <div class="highlight highlight-source-shell"><pre>hisham@skrall:tuah$ ./new_app.sh foo
 Creating new app: foo
