Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,17 +66,23 @@ hisham@skrall:tuah$
 │   └── static
 │       ├── assets/
 │       ├── css/
-│       └── dist/  
+│       ├── dist/  
+│       └── img
+│           ├── tuah-small.png
+│           └── tuah.png
 ├── rel
 │   ├── sys.config
 │   └── vm.args
+├── relx
 ├── relx.config
 ├── run.sh
 ├── src
-│   ├── foo.app.src
-│   ├── foo_app.erl
-│   ├── foo_sup.erl
-│   └── home_controller.erl
+│   ├── auth_controller.erl
+│   ├── baz.app.src
+│   ├── baz_app.erl
+│   ├── baz_sup.erl
+│   ├── home_controller.erl
+│   └── secret_controller.erl
 └── templates
     ├── error.dtl
     ├── home.dtl
