--- a/index.html
+++ b/index.html
@@ -123,28 +123,25 @@ That's it!</p>
 <li>
 <p>Different notations for Selector/Projector, use which one that you like. I preferred the second notation as it is easier to read and comprehend.</p>
 
-<pre><code>mongo_worker:find(&lt;&lt;"posts"&gt;&gt;, {&lt;&lt;"tag"&gt;&gt;, &lt;&lt;"general"&gt;&gt;, 
-                                &lt;&lt;"cat"&gt;&gt;, &lt;&lt;"News"&gt;&gt;}, 
-  [{batchsize, 10}, {skip, 20}, 
-  {projector, {&lt;&lt;"created_at"&gt;&gt;, 1, &lt;&lt;"grpid"&gt;&gt;, 1}}]).
-</code></pre>
+<div class="highlight highlight-source-erlang"><pre><span class="pl-en">mongo_worker</span>:<span class="pl-en">find</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>posts<span class="pl-pds">"</span></span>&gt;&gt;, {&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>tag<span class="pl-pds">"</span></span>&gt;&gt;, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>general<span class="pl-pds">"</span></span>&gt;&gt;, 
+                                &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>cat<span class="pl-pds">"</span></span>&gt;&gt;, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>News<span class="pl-pds">"</span></span>&gt;&gt;}, 
+  [{<span class="pl-c1">batchsize</span>, <span class="pl-c1">10</span>}, {<span class="pl-c1">skip</span>, <span class="pl-c1">20</span>}, 
+  {<span class="pl-c1">projector</span>, {&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>created_at<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-c1">1</span>, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>grpid<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-c1">1</span>}}]).</pre></div>
 
-<pre><code>mongo_worker:find(&lt;&lt;"posts"&gt;&gt;, #{&lt;&lt;"tag"&gt;&gt; =&gt; &lt;&lt;"general"&gt;&gt;, 
-                                 &lt;&lt;"cat"&gt;&gt; =&gt; &lt;&lt;"News"&gt;&gt;}, 
-  [{batchsize, 10}, {skip, 20}, 
-  {projector, #{&lt;&lt;"created_at"&gt;&gt; =&gt; 1, &lt;&lt;"grpid"&gt;&gt; =&gt; 1}}]).
-</code></pre>
+<div class="highlight highlight-source-erlang"><pre><span class="pl-en">mongo_worker</span>:<span class="pl-en">find</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>posts<span class="pl-pds">"</span></span>&gt;&gt;, #{&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>tag<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>general<span class="pl-pds">"</span></span>&gt;&gt;, 
+                                 &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>cat<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>News<span class="pl-pds">"</span></span>&gt;&gt;}, 
+  [{<span class="pl-c1">batchsize</span>, <span class="pl-c1">10</span>}, {<span class="pl-c1">skip</span>, <span class="pl-c1">20</span>}, 
+  {<span class="pl-c1">projector</span>, #{&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>created_at<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> <span class="pl-c1">1</span>, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>grpid<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> <span class="pl-c1">1</span>}}]).</pre></div>
 </li>
 <li>
 <p>Regular expressions are also there.</p>
 
-<pre><code>mongo_worker:find(&lt;&lt;"posts"&gt;&gt;, 
-  {&lt;&lt;"title"&gt;&gt;, #{&lt;&lt;"$regex"&gt;&gt;  =&gt; &lt;&lt;"some*"&gt;&gt;, 
-                  &lt;&lt;"$options"&gt;&gt; =&gt; &lt;&lt;"i"&gt;&gt;}}, 
-  [{projector, #{&lt;&lt;"grpid"&gt;&gt; =&gt; 1, 
-                 &lt;&lt;"title"&gt;&gt; =&gt; 1, 
-                 &lt;&lt;"author.fullname"&gt;&gt; =&gt; 1}}]).
-</code></pre>
+<div class="highlight highlight-source-erlang"><pre><span class="pl-en">mongo_worker</span>:<span class="pl-en">find</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>posts<span class="pl-pds">"</span></span>&gt;&gt;, 
+  {&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>title<span class="pl-pds">"</span></span>&gt;&gt;, #{&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>$regex<span class="pl-pds">"</span></span>&gt;&gt;  <span class="pl-k">=&gt;</span> &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>some*<span class="pl-pds">"</span></span>&gt;&gt;, 
+                  &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>$options<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>i<span class="pl-pds">"</span></span>&gt;&gt;}}, 
+  [{<span class="pl-c1">projector</span>, #{&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>grpid<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> <span class="pl-c1">1</span>, 
+                 &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>title<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> <span class="pl-c1">1</span>, 
+                 &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>author.fullname<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> <span class="pl-c1">1</span>}}]).</pre></div>
 </li>
 </ol>
 
@@ -158,7 +155,7 @@ That's it!</p>
 
 <ul>
 <li>
-<code>/post/message/20</code>
+<p><code>/post/message/20</code></p>
 
 <ul>
 <li>
@@ -173,7 +170,7 @@ That's it!</p>
 </ul>
 </li>
 <li>
-<code>/user/view/details/100</code>
+<p><code>/user/view/details/100</code></p>
 
 <ul>
 <li>
@@ -188,7 +185,7 @@ That's it!</p>
 </ul>
 </li>
 <li>
-<code>/view/message/20?float=false&amp;data=none</code>
+<p><code>/view/message/20?float=false&amp;data=none</code></p>
 
 <ul>
 <li>
@@ -218,17 +215,15 @@ That's it!</p>
 <li>
 <p>All handlers are in the form:</p>
 
-<pre><code>handle_request(Method, Action, Args, Params, Req)
-</code></pre>
+<div class="highlight highlight-source-erlang"><pre><span class="pl-en">handle_request</span>(<span class="pl-smi">Method</span>, <span class="pl-smi">Action</span>, <span class="pl-smi">Args</span>, <span class="pl-smi">Params</span>, <span class="pl-smi">Req</span>)</pre></div>
 </li>
 <li>
 <p>Request handler parameters:</p>
 
 <ul>
+<li><p><code>Method</code> - can be HTTP Method, capitalized (e.g. GET, POST, PUT, DELETE etc.)</p></li>
 <li>
-<code>Method</code> - can be HTTP Method, capitalized (e.g. GET, POST, PUT, DELETE etc.)</li>
-<li>
-<code>Action</code> - the second parameters in the URL chosen, e.g.
+<p><code>Action</code> - the second parameters in the URL chosen, e.g.</p>
 
 <ul>
 <li>
@@ -240,7 +235,7 @@ That's it!</p>
 </ul>
 </li>
 <li>
-<code>Args</code> - the list of arguments of the URL
+<p><code>Args</code> - the list of arguments of the URL</p>
 
 <ul>
 <li>
@@ -252,7 +247,7 @@ That's it!</p>
 </ul>
 </li>
 <li>
-<code>Params</code> - the request parameters
+<p><code>Params</code> - the request parameters</p>
 
 <ul>
 <li>
@@ -267,8 +262,7 @@ That's it!</p>
 <code>sid</code> : contains the session id</li>
 </ul>
 </li>
-<li>
-<code>Req</code> - the Cowboy Req parameters. It is hardly used, but just in case you want to play around with the Cowboy internals.</li>
+<li><p><code>Req</code> - the Cowboy Req parameters. It is hardly used, but just in case you want to play around with the Cowboy internals.</p></li>
 </ul>
 </li>
 </ol>
@@ -298,43 +292,41 @@ That's it!</p>
 <li>
 <p>Typical authentication procedures are:</p>
 
-<pre><code>handle_request(&lt;&lt;"POST"&gt;&gt;, &lt;&lt;"login"&gt;&gt; = Action, _Args, Params, _Req) -&gt;    
-    PostVals = maps:get(&lt;&lt;"qs_body"&gt;&gt;, Params),
-    Username = proplists:get_value(&lt;&lt;"username"&gt;&gt;, PostVals),
-    Password = proplists:get_value(&lt;&lt;"password"&gt;&gt;, PostVals),
+<div class="highlight highlight-source-erlang"><pre><span class="pl-en">handle_request</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>POST<span class="pl-pds">"</span></span>&gt;&gt;, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>login<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=</span> <span class="pl-smi">Action</span>, <span class="pl-smi">_Args</span>, <span class="pl-smi">Params</span>, <span class="pl-smi">_Req</span>) <span class="pl-k">-&gt;</span>    
+    <span class="pl-smi">PostVals</span> <span class="pl-k">=</span> <span class="pl-en">maps</span>:<span class="pl-en">get</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>qs_body<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-smi">Params</span>),
+    <span class="pl-smi">Username</span> <span class="pl-k">=</span> <span class="pl-en">proplists</span>:<span class="pl-en">get_value</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>username<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-smi">PostVals</span>),
+    <span class="pl-smi">Password</span> <span class="pl-k">=</span> <span class="pl-en">proplists</span>:<span class="pl-en">get_value</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>password<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-smi">PostVals</span>),
 
-    case Username =:= &lt;&lt;&gt;&gt; orelse Password =:= &lt;&lt;&gt;&gt; of
-        true -&gt;
-            {render, Action, [{error, &lt;&lt;"All fields are required."&gt;&gt;}]};
-        _ -&gt;
-            case mongo_worker:find(?DB_USERS, #{&lt;&lt;"username"&gt;&gt; =&gt; Username}) of
-                {ok, []} -&gt;
-                    {render, Action, [{error, &lt;&lt;"Invalid username, or password"&gt;&gt;}]};
-                {ok, [User]} -&gt;
-                    ?DEBUG("User= ~p~n", [User]),
-                    HashPass = web_util:hash_password(Password),
-                    Pass = maps:get(&lt;&lt;"password"&gt;&gt;, User),
-                    case Pass =/= HashPass of
-                        true -&gt;
-                            {render, Action, [{error, &lt;&lt;"Invalid username, or password"&gt;&gt;}]};
-                        _ -&gt;
-                            Sid = maps:get(&lt;&lt;"sid"&gt;&gt;, Params),
-                            session_worker:set_cookies(Sid, Username),
+    <span class="pl-k">case</span> <span class="pl-smi">Username</span> <span class="pl-k">=:=</span> &lt;&lt;&gt;&gt; <span class="pl-k">orelse</span> <span class="pl-smi">Password</span> <span class="pl-k">=:=</span> &lt;&lt;&gt;&gt; <span class="pl-k">of</span>
+        <span class="pl-c1">true</span> -&gt;
+            {<span class="pl-c1">render</span>, <span class="pl-smi">Action</span>, [{<span class="pl-c1">error</span>, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>All fields are required.<span class="pl-pds">"</span></span>&gt;&gt;}]};
+        <span class="pl-v">_</span> -&gt;
+            <span class="pl-k">case</span> <span class="pl-en">mongo_worker</span>:<span class="pl-en">find</span>(<span class="pl-k">?</span><span class="pl-en">DB_USERS</span>, #{&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>username<span class="pl-pds">"</span></span>&gt;&gt; <span class="pl-k">=&gt;</span> <span class="pl-smi">Username</span>}) <span class="pl-k">of</span>
+                {<span class="pl-c1">ok</span>, []} -&gt;
+                    {<span class="pl-c1">render</span>, <span class="pl-smi">Action</span>, [{<span class="pl-c1">error</span>, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>Invalid username, or password<span class="pl-pds">"</span></span>&gt;&gt;}]};
+                {<span class="pl-c1">ok</span>, [<span class="pl-smi">User</span>]} -&gt;
+                    <span class="pl-k">?</span><span class="pl-en">DEBUG</span>(<span class="pl-s"><span class="pl-pds">"</span>User= <span class="pl-c1">~p~n</span><span class="pl-pds">"</span></span>, [<span class="pl-smi">User</span>]),
+                    <span class="pl-smi">HashPass</span> <span class="pl-k">=</span> <span class="pl-en">web_util</span>:<span class="pl-en">hash_password</span>(<span class="pl-smi">Password</span>),
+                    <span class="pl-smi">Pass</span> <span class="pl-k">=</span> <span class="pl-en">maps</span>:<span class="pl-en">get</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>password<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-smi">User</span>),
+                    <span class="pl-k">case</span> <span class="pl-smi">Pass</span> <span class="pl-k">=/=</span> <span class="pl-smi">HashPass</span> <span class="pl-k">of</span>
+                        <span class="pl-c1">true</span> -&gt;
+                            {<span class="pl-c1">render</span>, <span class="pl-smi">Action</span>, [{<span class="pl-c1">error</span>, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>Invalid username, or password<span class="pl-pds">"</span></span>&gt;&gt;}]};
+                        <span class="pl-v">_</span> -&gt;
+                            <span class="pl-smi">Sid</span> <span class="pl-k">=</span> <span class="pl-en">maps</span>:<span class="pl-en">get</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>sid<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-smi">Params</span>),
+                            <span class="pl-en">session_worker</span>:<span class="pl-en">set_cookies</span>(<span class="pl-smi">Sid</span>, <span class="pl-smi">Username</span>),
 
-                            %% redirect, assuming "secret" is defined.
-                            {redirect, &lt;&lt;"/secret"&gt;&gt;, {cookie, &lt;&lt;"auth"&gt;&gt;, Username}}
-                    end
-            end
-    end;
-</code></pre>
+                            <span class="pl-c">%% redirect, assuming "secret" is defined.</span>
+                            {<span class="pl-c1">redirect</span>, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>/secret<span class="pl-pds">"</span></span>&gt;&gt;, {<span class="pl-c1">cookie</span>, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>auth<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-smi">Username</span>}}
+                    <span class="pl-k">end</span>
+            <span class="pl-k">end</span>
+    <span class="pl-k">end</span>;</pre></div>
 </li>
 <li>
 <p>Logging out can be done by resetting the data in the session</p>
 
-<pre><code>handle_request(&lt;&lt;"GET"&gt;&gt;, &lt;&lt;"logout"&gt;&gt;, _Args, Params, _Req) -&gt;
-      session_worker:del_cookies(maps:get(&lt;&lt;"sid"&gt;&gt;, Params)),
-      {redirect, &lt;&lt;"/"&gt;&gt;};
-</code></pre>
+<div class="highlight highlight-source-erlang"><pre><span class="pl-en">handle_request</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>GET<span class="pl-pds">"</span></span>&gt;&gt;, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>logout<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-smi">_Args</span>, <span class="pl-smi">Params</span>, <span class="pl-smi">_Req</span>) <span class="pl-k">-&gt;</span>
+      <span class="pl-en">session_worker</span>:<span class="pl-en">del_cookies</span>(<span class="pl-en">maps</span>:<span class="pl-en">get</span>(&lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>sid<span class="pl-pds">"</span></span>&gt;&gt;, <span class="pl-smi">Params</span>)),
+      {<span class="pl-c1">redirect</span>, &lt;&lt;<span class="pl-s"><span class="pl-pds">"</span>/<span class="pl-pds">"</span></span>&gt;&gt;};</pre></div>
 </li>
 </ol>
 
